# postgres-homeworks

./: .gitignore  config.py  create_tables.sql  pyproject.toml  utils.py
homework-1/: config.py  create_tables.sql  main.py  parsing_csv_files.py  utils.py
homework-1/classes/: __init__.py
homework-1/north_data/: csv_data.py
homework-1/utils/: for_open_file.py
homework-2/: filter_sorting.sql  groupby.sql  northwind_script.sql  simple_queries.sql
homework-3/: queries.sql
homework-4/: alter_northwind.sql  alter_student.sql
homework-5/: main.py
kyrsa4/: main.py
