[tool.poetry]
name = "postgres-homeworks"
version = "0.1.0"
description = ""
authors = ["sanchez005909 <sanchez005909@gmail.com>"]
readme = "README.md"
packages = [{include = "postgres_homeworks"}]

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
